Updated blurb font size to fix wrapping issue

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -170,7 +170,7 @@ a:hover {
 }
 
 .blurb {
-  font-size: rems(22px);
+  font-size: rems(20px);
   text-align: center;
 }
 
